// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentComponent if experiment was not saved should show the experiment form 1`] = `
<div
  id="root0"
>
  
  <div
    class="experiment"
  >
    <em-experiment-info />
    
    <div
      class="experiment-status-wrapper"
    >
      <em-experiment-status-message
        class="qa-experiment-status-message"
      />
      <em-experiment-status-chart />
    </div>
  </div>
  
</div>
`;

exports[`ExperimentComponent if experiment was saved should show the experiment 1`] = `
<div
  id="root8"
>
  
  <div
    class="experiment"
  >
    <em-experiment-info />
    
    <div
      class="experiment-status-wrapper"
    >
      <em-experiment-status-message
        class="qa-experiment-status-message"
      />
      <em-experiment-status-chart />
    </div>
  </div>
  
</div>
`;
